--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://maps.googleapis.com/maps/api/js?key=<Your API KEY>&libraries=places&language=en"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=<Your API KEY>&libraries=places&language=en"></script> -->
 </head>
-<body>
+<body style="background-color:rgb(228, 228, 228)">
   <app-root></app-root>
 </body>
 </html>
